Task 1521 simplify.